Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: repl-svc
  namespace: repl
  labels:
    app: repl-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: repl-app
  type: ClusterIP
