service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repl-svc
  labels:
    app: repl-app
spec:
  tls:
  - secretName: tls-secret
  ports:
    - protocol: https
      port: 443
      targetPort: 8080
      name: https
  selector:
    app: repl-app
  type: LoadBalancer
