Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repl-ingress
  namespace: repl
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-name: route
spec:
  defaultBackend:
    service:
      name: repl-svc
      port:
        number: 8080
  tls:
    - hosts:
        - repl.online-ide.com
        - repl.online-cpp.com
        - repl.online-java.com
        - repl.online-python.com
      secretName: tls-secret
  rules:
    - host: repl.online-ide.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: repl-svc
                port:
                  number: 8080
    - host: repl.online-java.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: repl-svc
                port:
                  number: 8080
    - host: repl.online-cpp.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: repl-svc
                port:
                  number: 8080
    - host: repl.online-python.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: repl-svc
                port:
                  number: 8080
