ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: repl-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - repl.online-ide.com
    - repl.online-cpp.com
    secretName: tls-secret
  rules:
  - host: repl.online-ide.com
    http:
      paths:
      - backend:
          serviceName: repl-svc
          servicePort: 8080
  - host: repl.online-cpp.com
    http:
      paths:
      - backend:
          serviceName: repl-svc
          servicePort: 8080
