NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-egress
  namespace: repl
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
